--- a/man/man1/ndpp.1
+++ b/man/man1/ndpp.1
@@ -1,27 +1,17 @@
-.TH openmc 1 "November 2012" " " "OpenMC"
+.TH ndpp 1 "June 2013" " " "NDPP"
 .SH NAME
-openmc \- Executes the OpenMC Monte Carlo code
+ndpp \- Executes the NDPP ACE pre-processor code
 .SH DESCRIPTION
-This command is used to execute the OpenMC Monte Carlo code. It is assumed that
+This command is used to execute the NDPP code. It is assumed that
 a set of XML input files has already been created and that ACE format cross
 sections are available.
 .SH SYNOPSIS
-\fBopenmc\fR [\fIoptions\fR] [\fIpath\fR]
+\fBndpp\fR [\fIoptions\fR] [\fIpath\fR]
 .PP
 It is assumed that if no
 .I path
 is specified, the XML input files are present in the current directory.
 .SH OPTIONS
-.TP
-.B "\-p\fR, \fP\-\-plot"
-Run in plotting mode
-.TP
-.BI \-r " statepoint" "\fR,\fP \-\-restart" " statepoint"
-Restart a previous run using data stored in \fIstatepoint\fP.
-.TP
-.BI \-s " particleFile" "\fR,\fP \-\-particle" " particleFile"
-Run a single particle history from a particle restart file named
-\fIparticleFile\fP.
 .TP
 .B "\-v\fR, \fP\-\-version"
 Show version information.
@@ -30,16 +20,17 @@ Show version information.
 Show help message.
 .SH ENVIRONMENT VARIABLES
 The behavior of
-.B openmc
+.B ndpp
 is affected by the following environment variables.
 .TP
 .B CROSS_SECTIONS
 Indicates the default path to the cross_sections.xml summary file that is used
 to locate ACE format cross section libraries if the user has not specified the
 <cross_sections> tag in
-.I settings.xml\fP.
+.I ndpp.xml\fP.
 .SH LICENSE
-Copyright \(co 2011-2013 Massachusetts Institute of Technology.
+Copyright \(co 2013 University of Michigan and 2011-2013 Massachusetts Institute
+of Technology.
 .PP
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
@@ -58,10 +49,10 @@ COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
 IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 .SH REPORTING BUGS
-The OpenMC source code is hosted on GitHub at
-https://github.com/mit-crpg/openmc. With a github account, you can submit issues
-directly on the github repository that will then be reviewed by OpenMC
+The NDPP source code is hosted on BitBucket at
+https://www.bitbucket.org/nelsonag/ndpp. With a BitBucket account, you can 
+submit issues directly on the repository that will then be reviewed by NDPP
 developers. Alternatively, you can send a bug report to
-.I openmc-dev@mit.edu\fP.
+.I nelsonag@umich.edu\fP.
 .SH AUTHOR
-Paul K. Romano (\fIpaul.k.romano@gmail.com\fP)
+Adam G. Nelson (\fInelsonag@umich.edu\fP)
