Cleaned up Supporting files like License, docs, examples.

--- a/man/man1/ndpp.1
+++ b/man/man1/ndpp.1
@@ -1,4 +1,4 @@
-.TH ndpp 1 "June 2013" " " "NDPP"
+.TH ndpp 1 "May 2014" " " "NDPP"
 .SH NAME
 ndpp \- Executes the NDPP ACE pre-processor code
 .SH DESCRIPTION
@@ -29,8 +29,7 @@ to locate ACE format cross section libraries if the user has not specified the
 <cross_sections> tag in
 .I ndpp.xml\fP.
 .SH LICENSE
-Copyright \(co 2013 University of Michigan and 2011-2013 Massachusetts Institute
-of Technology.
+Copyright \(co 2013-2014 Adam G Nelson and Contributors.
 .PP
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
@@ -50,9 +49,6 @@ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 .SH REPORTING BUGS
 The NDPP source code is hosted on BitBucket at
-https://www.bitbucket.org/nelsonag/ndpp. With a BitBucket account, you can 
+https://www.bitbucket.org/nelsonag/ndpp. With a BitBucket account, you can
 submit issues directly on the repository that will then be reviewed by NDPP
-developers. Alternatively, you can send a bug report to
-.I nelsonag@umich.edu\fP.
-.SH AUTHOR
-Adam G. Nelson (\fInelsonag@umich.edu\fP)
+developers.
